Changes necessary contrast issues

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
-  font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  font-family: "Roboto", Helvetica, sans-serif;
+  background-color: rgb(245, 236, 217);
   margin: 0;
   padding: 0;
 }
@@ -11,7 +11,12 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Stick No Bills', 'Roboto', Helvetica, sans-serif;
+  font-family: "Stick No Bills", "Roboto", Helvetica, sans-serif;
+  color: black;
+}
+
+p {
+  color: black;
 }
 
 .container {
@@ -42,6 +47,19 @@ img {
   color: inherit;
   text-decoration: none;
   font-size: 1.25rem;
+  transition: 0.3s;
+}
+
+.main-nav ul li a:hover {
+  color: #439e66; 
+}
+
+.main-nav ul li a:active {
+  color: #4e2992; /
+}
+
+.main-nav ul li a:focus {
+  border-bottom: 2px solid #1f4b30;
 }
 
 form input,
@@ -49,7 +67,7 @@ form textarea {
   display: block;
   width: 100%;
   margin-bottom: 1rem;
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
 }
 
 form textarea {
@@ -64,6 +82,16 @@ form button {
   border: 2px solid black;
   padding: 1rem;
   text-transform: uppercase;
+  border-radius: 10px;
+}
+
+form button:hover {
+  color: #439e66; 
+  cursor: pointer;
+}
+
+form button:active {
+  color: #4e2992; 
 }
 
 .site-footer {
